# unittest-FW

src/: CMakeLists.txt
src/firmwareLib/: CMakeLists.txt  utilityFunction.c  utilityFunction.h  utilityFunction_io.cpp  utilityFunction_io.h
src/unittest/: CMakeLists.txt  testUtilityFunction.cpp  testUtilityFunction_io.cpp
